--- a/config.yaml
+++ b/config.yaml
@@ -1,5 +1,5 @@
 title: This is gonna be my personal hell
-baseURL: https://xyz.netlify.com/
+baseURL: https://dreamy-lamarr-30f2c8.netlify.com
 languageCode: cs-cz
 publishDir: public
 
