změna obsahu souboru index.md a změna názvu webu v souboru config.yaml

--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-title: This is gonna be my personal hell
+title: Kam na cesty
 baseURL: https://dreamy-lamarr-30f2c8.netlify.com
 languageCode: cs-cz
 publishDir: public
